# fraud-detection-pipeline

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: embed.html  examples.json  index.html
docs/model/: curves.json  lgb.onnx  meta.json  sample.json  xgb.onnx
infra/: sam-template.yaml  schema.sql
notebooks/: eda.py
scripts/: download_data.py  eval.py  export_curves.py  export_onnx.py  train.py
src/: db.py  evaluate.py  features.py  model.py  score_api.py  score_local.py
tests/: conftest.py  test_features.py  test_model.py  test_score_api.py
